feat: 🎸 add leetcode service
